2008-04-09 Jim Garlick <garlick.jim@gmail.com>

	* src/ics8065.c : Renamed get/set netmask opt from -k/K to -n/N.
	Renamed keepalive opt from -v/V to -k/K.

	* src/ics8064.c : New.
		
2008-04-07 Jim Garlick <garlick.jim@gmail.com>

	* src/gpsh.c : Removed.

	* : moved ics support routines to libics subdirectory.

	* src/gpib.c : Integrate libvxi.

2008-01-21 Jim Garlick <garlick.jim@gmail.com>

	* src/gpib.c : Tear down abort before destroying link to avoid
	crashing ics8065 firmware.

	* libvxi/* : New refactored VXI-11 code from gpib.c (not used yet).

2008-01-19 Jim Garlick <garlick.jim@gmail.com>

	* src/gpib.[ch] : Implement abort channel.  Fix some error handling.

2007-12-31 Jim Garlick <garlick.jim@gmail.com>

	* src/hostlist.[ch], src/list.[ch], src/argv.[ch] : New, 
	borrowed from powerman project.

	* src/hp3488.c : Cleanup and restructuring:
	- Added --shell option for powerman interface.
	- Added --config option for setting slot configuration manually.
	- Added --showconfig option to display slot configuration.
	- Added --list to display valid channel addresses.
	- Made --open,close,query accept lists and ranges of channel addreses.

	* hp3488.1 : Updated to reflect interface changes.

2007-12-03 Jim Garlick <garlick.jim@gmail.com>

	* htdocs/index.html : Fun with inline images.

2007-12-01 Jim Garlick <garlick.jim@gmail.com>

	* htdocs/vxi.html : Expanded a bit.

	* htdocs/vxi.dia, htdocs/vxi.png : New, used by vxi.html.

2007-11-30 Jim Garlick <garlick.jim@gmail.com>

	* src/gpib.c : Comment out srq thread and abort hook.

	* src/a34410.[ch] : New.

2007-11-25 Jim Garlick <garlick.jim@gmail.com>

	* src/gpib.c : Implement srq thread and abort hook.

2007-11-23 Jim Garlick <garlick.jim@gmail.com>

	* src/vxi11srq.x : Rename to vxi11intr.x.
	
	* src/gpib.c : Handle short read in _ibrd() in case this is possible.
	Make providing _ibrd() a buffer too small to contain a response a 
	fatal error.  Drop obvious assertions from _ibrd().
