@@ -33,7 +33,6 @@
 #include <math.h>
 #include <stdint.h>
 
-#include "units.h"
 #include "gpib.h"
 #include "util.h"
 
